# gi

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  gitignore.json  gitignores.json  pyproject.toml
.github/workflows/: tests.yml
gi/: __main__.py  constants.py  consts.py  functions.py  get_gitignores.py
gi_cli/: __init__.py  __main__.py  config.py  functions.py
tests/: test_functions.py  test_gi.py
