[tool.poetry]
name = "gi-cli"
version = "0.0.4"
description = "CLI to easily create .gitignore files"
authors = ["ninest"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/ninest/gi/"
documentation = "https://github.com/ninest/gi/"


[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.15.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
pre-commit = "^2.9.3"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gi = "gi_cli.__main__:main"
gitignore = "gi_cli.__main__:main"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''